增加了RSA层 1.接受服务器的公钥并加密传输 2.传输给服务器自己的公钥并且进行加密

--- a/Intelligent-dormitory-integrated-control-system（PC）/Intelligent-dormitory-system（PC）.csproj
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Intelligent-dormitory-system（PC）.csproj
@@ -164,7 +164,7 @@
     <Compile Include="Controller\ToastController.xaml.cs">
       <DependentUpon>ToastController.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Sock\Status.cs" />
+    <Compile Include="Sock\Enum.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
