添加了FTP返回按钮，缓存了Communicate页面

--- a/Intelligent-dormitory-integrated-control-system（PC）/Intelligent-dormitory-system（PC）.csproj
+++ b/Intelligent-dormitory-integrated-control-system（PC）/Intelligent-dormitory-system（PC）.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="ChatBoxTool.cs" />
+    <Compile Include="ConstantVariable\ConstantVariable.cs" />
     <Compile Include="FTPExplorer\DialogContentWithTextBox.xaml.cs">
       <DependentUpon>DialogContentWithTextBox.xaml</DependentUpon>
     </Compile>
